Metadata Cache Support
# Conflicts:
#	plugins/engine-datafusion/jni/Cargo.toml
#	plugins/engine-datafusion/jni/src/lib.rs