@@ -11,13 +11,19 @@ package org.opensearch.datafusion;
 import org.apache.arrow.memory.RootAllocator;
 import org.apache.arrow.vector.VectorSchemaRoot;
 import org.apache.lucene.search.Query;
+import org.opensearch.common.settings.ClusterSettings;
+import org.opensearch.common.settings.Setting;
 import org.opensearch.common.settings.Settings;
 import org.opensearch.core.common.io.stream.StreamOutput;
+import org.opensearch.core.common.unit.ByteSizeValue;
 import org.opensearch.core.index.shard.ShardId;
 import org.opensearch.core.xcontent.XContentBuilder;
 import org.opensearch.datafusion.core.SessionContext;
 import org.opensearch.datafusion.search.DatafusionQuery;
 import org.opensearch.datafusion.search.DatafusionSearcher;
+import org.opensearch.datafusion.search.cache.CacheAccessor;
+import org.opensearch.datafusion.search.cache.CacheManager;
+import org.opensearch.datafusion.search.cache.CacheType;
 import org.opensearch.env.Environment;
 import org.opensearch.index.engine.exec.FileMetadata;
 import org.opensearch.index.engine.exec.text.TextDF;
@@ -42,6 +48,11 @@ import java.io.InputStream;
 import java.util.*;
 
 import static org.mockito.Mockito.when;
+import static org.opensearch.common.settings.ClusterSettings.BUILT_IN_CLUSTER_SETTINGS;
+import static org.opensearch.datafusion.search.cache.CacheSettings.METADATA_CACHE_ENABLED;
+import static org.opensearch.datafusion.search.cache.CacheSettings.METADATA_CACHE_EVICTION_TYPE;
+import static org.opensearch.datafusion.search.cache.CacheSettings.METADATA_CACHE_SIZE_LIMIT;
+
 import org.apache.arrow.vector.FieldVector;
 import org.apache.arrow.vector.VectorSchemaRoot;
 import org.apache.arrow.vector.types.pojo.Field;
@@ -65,7 +76,15 @@ public class DataFusionServiceTests extends OpenSearchTestCase {
         Settings mockSettings = Settings.builder().put("path.data", "/tmp/test-data").build();
 
         when(mockEnvironment.settings()).thenReturn(mockSettings);
-        service = new DataFusionService(Map.of());
+        Set<Setting<?>> clusterSettingsToAdd = new HashSet<>(BUILT_IN_CLUSTER_SETTINGS);
+        clusterSettingsToAdd.add(METADATA_CACHE_ENABLED);
+        clusterSettingsToAdd.add(METADATA_CACHE_SIZE_LIMIT);
+        clusterSettingsToAdd.add(METADATA_CACHE_EVICTION_TYPE);
+
+        ClusterSettings clusterSettings = new ClusterSettings(Settings.EMPTY, clusterSettingsToAdd);
+
+        service = new DataFusionService(Collections.emptyMap(), clusterSettings);
+        //service = new DataFusionService(Map.of());
         service.doStart();
     }
 
@@ -113,7 +132,7 @@ public class DataFusionServiceTests extends OpenSearchTestCase {
                 throw new RuntimeException(e);
             }
 
-            long streamPointer = datafusionSearcher.search(new DatafusionQuery("test-index",protoContent, new ArrayList<>()), service.getTokioRuntimePointer());
+            long streamPointer = datafusionSearcher.search(new DatafusionQuery(protoContent, new ArrayList<>()), service.getTokioRuntimePointer());
             RootAllocator allocator = new RootAllocator(Long.MAX_VALUE);
             RecordBatchStream stream = new RecordBatchStream(streamPointer, service.getTokioRuntimePointer() , allocator);
 
@@ -153,5 +172,48 @@ public class DataFusionServiceTests extends OpenSearchTestCase {
                 datafusionSearcher.close();
             }
         }
+    }
+
+    public void testCacheOperations() {
+        CacheAccessor metadataCache = service.getCacheManager().getCacheAccessor(CacheType.METADATA);
+
+        CacheManager cacheManager= service.getCacheManager();
+        String dirPath = "/Users/abhital/dev/src/forkedrepo/OpenSearch/plugins/engine-datafusion/src";
+        String fileName = "hits9_v1.parquet";
+
+        String filePath = dirPath + "/" + fileName;
+        // add File using CacheManager
+        cacheManager.addToCache(dirPath,List.of(fileName));
+
+        // Get file using individual Cache Accessor Methods -> Prints Cache content size
+        assertTrue((Boolean) metadataCache.get(filePath));
+
+        logger.info("Memory Consumed by MetadataCache : {}",metadataCache.getMemoryConsumed());
+        logger.info("Memory Consumed by CacheManager : {}",cacheManager.getTotalUsedBytes());
+
+        logger.info("Total Configured Size Limit for MetadataCache : {}",metadataCache.getConfiguredSizeLimit());
+        logger.info("Total Configured Size Limit for CacheManager : {}",cacheManager.getTotalSizeLimit());
+
+        boolean removed = cacheManager.removeFiles(dirPath,List.of(fileName));
+        logger.info("Is file removed: {}. Contains File Check: {} Ideally remove will not work as we have multiple references",removed, metadataCache.containsFile(filePath));
+        logger.info("Memory Consumed by MetadataCache : {}",metadataCache.getMemoryConsumed());
+        logger.info("Memory Consumed by CacheManager : {}",cacheManager.getTotalUsedBytes());
+
+
+        // add File again to cache
+        cacheManager.addToCache(dirPath,List.of(fileName));
+        logger.info("Entries in Metadata Cache : {}",cacheManager.getCacheAccessor(CacheType.METADATA).getEntries());
+
+        // change cluster setting to update sizeLimit -> eventually evicts entries
+        metadataCache.setSizeLimit(new ByteSizeValue(40));
+        // file will be evicted as sizeLimit is decreased
+        logger.info("Entries in Metadata Cache : {}",cacheManager.getCacheAccessor(CacheType.METADATA).getEntries());
+
+        // Add file again to test if cache clear works
+        metadataCache.put(filePath);
+        logger.info("Entries in Metadata Cache : {}",cacheManager.getCacheAccessor(CacheType.METADATA).getEntries());
+        metadataCache.clear();
+        logger.info("Entries in Metadata Cache : {}",cacheManager.getCacheAccessor(CacheType.METADATA).getEntries());
+
     }
 }
